Add graphql for Habits

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+API_URL=http://localhost:3000/api/graphql
 MONGO_URL=mongodb+srv://fake:fake@cluster0-qaebu.mongodb.net/habit?retryWrites=true&w=majority
