--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "apollo-server-micro": "^2.15.0",
     "dotenv": "^8.2.0",
     "graphql-tag": "^2.10.3",
+    "graphql-toolkit": "^0.7.5",
     "isomorphic-unfetch": "^3.0.0",
     "mongoose": "^5.9.20",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
+  },
+  "devDependencies": {
+    "babel-plugin-import-graphql": "^2.7.0"
   }
 }
