--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "rm -rf ./node_modules/.cache/babel-loader && next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -16,6 +16,7 @@
     "apollo-link-http": "^1.5.17",
     "apollo-server-micro": "^2.15.0",
     "dotenv": "^8.2.0",
+    "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "graphql-toolkit": "^0.7.5",
     "isomorphic-unfetch": "^3.0.0",
